# nightreader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ExportOptions.plist  LICENSE  README-WINDOWS.md  README.md  build-windows.bat  capacitor.config.cjs  capacitor.config.js  capacitor.config.ts  dev-windows.bat  index.html  install-prerequisites.ps1  package-lock.json  package.json  vite.config.js  winget-manifest.yaml
.github/workflows/: build-android.yml  build-desktop.yml  build-ios.yml  build-windows-only.yml  ci.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nightreader/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
ios/: Info.plist
src/: App.jsx  App.module.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src/components/: PdfPage.jsx  PdfPage.module.css  SearchBar.jsx  SearchBar.module.css  SettingsPanel.jsx  SettingsPanel.module.css  Sidebar.jsx  Sidebar.module.css  StatusBar.jsx  StatusBar.module.css  TabBar.jsx  Toolbar.jsx  Toolbar.module.css  TopBar.jsx  TopBar.module.css  Viewer.jsx  Viewer.module.css  WelcomeScreen.jsx  WelcomeScreen.module.css
src/hooks/: useKeyboardShortcuts.js  usePdfDocument.js
src/store/: useStore.js
src/styles/: global.css
src/utils/: platform.js
