[package]
name = "nightreader"
version = "0.1.0"
description = "NightReader — open-source cross-platform PDF reader"
authors = ["NightReader Contributors"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nightreader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
